--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/img/about_img.jpg">
+        <p>This website uses data from weatherstack api and mapbox api </p>
     </div>
     
     <p>{{>footer}}</p>
